--- a/myweb.html
+++ b/myweb.html
@@ -6,5 +6,8 @@
 <body>
 <h1>This is header</h1>
 <p>This is paragraph</p>
-<p>This is paragraph</p>
+<p>This is paragraph2</p>
+<p>This is paragraph2</p>
+<ing src "sample.jpg"/>
 </body>
+</html>
