--- a/myweb.html
+++ b/myweb.html
@@ -7,7 +7,8 @@
 <h1>This is header</h1>
 <p>This is paragraph</p>
 <p>This is paragraph2</p>
-<p>This is paragraph2</p>
+<p>This is paragraph3</p>
+<ing src "sample.jpg"/>
 <ing src "sample.jpg"/>
 </body>
 </html>
